# One_Simple_Trade

./: .gitignore  CHANGELOG.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .gitignore  .ruff.toml  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/v1/: routes.py
backend/app/core/: config.py
backend/app/models/: schemas.py
backend/app/services/: indicators.py  market_data.py  signal.py
backend/app/services/providers/: __init__.py  base.py  coingecko.py
backend/app/utils/: cache.py
backend/tests/: test_api.py  test_indicators.py  test_market_data_service.py  test_signal.py
docs/: AUDIT_TECHNICAL_DEBT.md  EPIC0_CLOSING.md  EPIC0_RESET.md  EPIC0_SUMMARY.md  MIGRATION_PLAN.md  RUNBOOK.md  methodology.md
frontend/: .eslintrc.cjs  .gitignore  Dockerfile  index.html  package.json  pnpm-lock.yaml  tsconfig.node.json  vite.config.ts  vitest.config.ts
frontend/scripts/: generate-lockfile.ps1  generate-lockfile.sh
frontend/src/: App.test.tsx  App.tsx  index.css
ops/scripts/: README.md  data_backup_conceptual.sh  health_check.ps1  health_check.sh
shared/types/: api.ts
